--- a/views/editPost.handlebars
+++ b/views/editPost.handlebars
@@ -12,5 +12,4 @@
     </form>
 </div>
 
-<script src="/js/edit-post.js"></script>
-<script src="/js/delete-post.js"></script>
+<script src="/js/index.js"></script>
